Adding the derive to part A.2

--- a/tarea1.ipynb
+++ b/tarea1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "id": "895be96f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "4644ef5c",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "id": "3c184742",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "id": "4a1bcdae",
    "metadata": {},
    "outputs": [
@@ -142,12 +142,73 @@
     "\n",
     "   * Derive and implement $\\hat\\beta = (X^\\top X)^{-1}X^\\top y$ using only `numpy`.\n",
     "   * Report coefficients and intercept.\n",
-    "   * Plot predicted vs. true median house value on a held-out test set."
+    "   * Plot predicted vs. true median house value on a held-out test set.\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "257ca373",
+   "metadata": {},
+   "source": [
+    "**Derivating from RSS to Normal Equation**\n",
+    "\n",
+    "We know:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{RSS}(\\beta) = \\|Y - X\\beta\\|_2^2 = (Y - X\\beta)^\\top (Y - X\\beta)\n",
+    "$$\n",
+    "Also:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{RSS}(\\beta) = \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2\n",
+    "$$\n",
+    "\n",
+    "Where we define the predicted value as\n",
+    "$$\n",
+    "\\hat{y}_i = x_i^\\top \\beta\n",
+    "$$\n",
+    "\n",
+    "So:\n",
+    "\n",
+    "$$\\mathrm{RSS}(\\beta) = \\sum_{i=1}^{n} (y_i - x_i^\\top \\beta)^2$$\n",
+    "\n",
+    "Deriving:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial\\, \\mathrm{RSS}(\\beta)}{\\partial \\beta} = -2 \\sum_{i=1}^{n} x_i^\\top (y_i - x_i^\\top \\beta)\n",
+    "$$\n",
+    "\n",
+    "Matrix form:\n",
+    "$$\n",
+    "\\frac{\\partial\\, \\mathrm{RSS}(\\beta)}{\\partial \\beta} = -2 X^\\top (Y - X\\beta)\n",
+    "$$\n",
+    "\n",
+    "F.O.C.\n",
+    "\n",
+    "Then, we do $\\frac{\\partial\\, \\mathrm{RSS}(\\beta)}{\\partial \\beta} = 0$ to obtain the $\\hat{\\beta}$ that minimize this loss:\n",
+    "\n",
+    "$$\n",
+    "-2 X^\\top (Y - X\\beta) = 0\n",
+    "$$\n",
+    "$$\n",
+    "X^\\top Y - X^\\top X \\beta = 0\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "X^\\top Y = X^\\top X \\beta\n",
+    "$$\n",
+    "\n",
+    "Then, assuming  $(X^\\top X)$ can be inverted, we finally get:\n",
+    "\n",
+    "$$\n",
+    "\\hat{\\beta} = (X^\\top X)^{-1} X^\\top Y\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "0b63dbf6",
    "metadata": {},
    "outputs": [
@@ -176,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "id": "ca20c2f5",
    "metadata": {},
    "outputs": [
@@ -207,14 +268,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be0895e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "bc4efa4e",
    "metadata": {},
@@ -228,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "052348dd",
    "metadata": {},
    "outputs": [],
