--- a/tarea1.ipynb
+++ b/tarea1.ipynb
@@ -309,24 +309,39 @@
    "id": "dbf65c27",
    "metadata": {},
    "source": [
-    "## Part C. Regularization and Hyperparameter Choice\n",
-    "\n",
+    "## Part C. Regularization and Hyperparameter Choice\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "450d8ebd",
+   "metadata": {},
+   "source": [
     "5. **Ridge and Lasso**\n",
     "\n",
     "   * Fit `Ridge` and `Lasso` regressions for $\\lambda$ values logarithmically spaced between $10^{-3}$ and $10^{2}$.\n",
     "   * Plot coefficient magnitude vs. $\\lambda$ (regularization paths).\n",
-    "   * Comment on which features shrink to (or toward) zero and why.\n",
-    "\n",
+    "   * Comment on which features shrink to (or toward) zero and why.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cf65377",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d3c6a2d",
+   "metadata": {},
+   "source": [
     "6. **k-Fold Cross-Validation**\n",
     "\n",
     "   * Use `KFold` with 5 folds and `cross_val_score` to select the best $\\alpha$ for both Ridge and Lasso.\n",
     "   * Alternatively, demonstrate the convenience of `RidgeCV` and `LassoCV`.\n",
-    "   * Compare cross-validated test errors.\n",
-    "\n",
-    "7. **Feature Engineering & Multicollinearity**\n",
-    "\n",
-    "  * Add polynomial features (degree 2) using `PolynomialFeatures`.\n",
-    "  * Re-run Ridge/Lasso and discuss how regularization copes with the enlarged feature space."
+    "   * Compare cross-validated test errors."
    ]
   },
   {
@@ -336,6 +351,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5cff071",
+   "metadata": {},
+   "source": [
+    "7. **Feature Engineering & Multicollinearity**\n",
+    "\n",
+    "  * Add polynomial features (degree 2) using `PolynomialFeatures`.\n",
+    "  * Re-run Ridge/Lasso and discuss how regularization copes with the enlarged feature space."
+   ]
   },
   {
    "cell_type": "markdown",
